--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -1,27 +1,42 @@
 body {
   background-color: #999;
-  font-size: 18px;
   text-align: center;
+  margin: 0;
+  padding: 0;
+  font-size: 24px;
+  font-family: 'helvetica neue', sans-serif;
+}
+
+#app-root {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+.app-wrapper {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+h1 {
+  margin: 1em 0;
 }
 
 .prediction-list {
-  width: 20em;
   margin: auto;
-  font-family: sans-serif;
-  font-size: .8em;
+  line-height: 1.33em;
 }
 
 .prediction {
-  padding: 1em;
-  border: 1px solid #666;
-  margin-bottom: 1em;
-  background-color: #aaa;
+  display: none;
 }
 
 .prediction.active {
   display: block;
-  background-color: #ccc;
 }
+
+
 
 .btn {
   font-size: 1em;
