disables nav btns beyond first, last prediction

--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -58,3 +58,8 @@ h1 {
 .navigation-menu button:first-child {
   margin-right: 1em;
 }
+
+.btn.disabled {
+  cursor: default;
+  pointer-events: none;
+}
