adds deny geolocation action; only shows zip input if user denies geolocation access

--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -63,3 +63,11 @@ h1 {
   cursor: default;
   pointer-events: none;
 }
+
+#zip-input {
+  display: none;
+}
+
+#zip-input.visible {
+  display: block;
+}
